fixing comment overflow css

--- a/src/app/comment-tree/comment-tree.component.css
+++ b/src/app/comment-tree/comment-tree.component.css
@@ -1,5 +1,14 @@
 .comment-container {
     min-height: 90vh;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    -ms-word-break: break-all;
+    word-break: break-all;
+    word-break: break-word;
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto;
 }
  
  @-webkit-keyframes fadeIn {
